<resources>
    <string name="app_name">ITmeMOry</string>
    <string name="main_map">MainMap</string>
    <string name="news_page">NewsPage</string>
    <string name="quiz_page">Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="quiz_fragment">Quiz Fragment</string>
    <string name="news_fragment">News Fragment</string>
    <string name="change_text">Change text</string>
    <string name="enlarge_image">Увеличить изобрпжене</string>
    <string name="map">Map</string>
    <string name="back_home">Обратно</string>
    <string name="news_title">Статьи о памятных местах ИТМО</string>
    <string name="start_quiz">Начать квиз!</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="you_end_quiz">Вы закончили квиз!</string>
    <string name="hope_you_enjoy">Надеемся вам понравилось наше приложение и вы порекомендуете его своим друзьям!</string>
    <string name="_1_5">1 / 5</string>
    <string name="intro_quiz">Мы приготовили для вас несколько интересных вопросов, надеемся, вы найдете для себя что-то полезное)</string>
    <string name="services_main_topic">Секции</string>
    <string name="Quiz">Квиз</string>
    <string name="setting">Настройки</string>
    <string name="Settings">Настройки</string>
    <string name="place_on_map">Место на карте</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="Gallery">Галерея</string>
    <string name="more">Подробнее</string>
    <string name="Search">Поиск</string>
    <string name="panorama">Панорамы</string>
    <string name="sculptures">Скульптуры</string>
    <string name="Ways">Маршруты</string>
    <string name="add_query">Введите запрос</string>
</resources>