<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/service_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/services_main_topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:fontFamily="@font/pt_cabin_bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/service_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settings_button"
        android:fontFamily="@font/pt_cabin_bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_quiz_selector_part"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:text="@string/Quiz"
        android:gravity="bottom"
        android:paddingBottom="14dp"
        android:paddingStart="12dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/service_name"
        app:layout_constraintStart_toEndOf="@id/quiz_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_settings_selector_part"
        android:fontFamily="@font/pt_cabin_bold"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:text="@string/Settings"
        android:gravity="bottom"
        android:paddingBottom="14dp"
        android:paddingStart="12dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/search_button_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_search_section_part"
        android:fontFamily="@font/pt_cabin_bold"
        android:gravity="bottom"
        android:minWidth="150dp"
        android:minHeight="100dp"
        android:paddingStart="12dp"
        android:paddingBottom="14dp"
        android:text="@string/Search"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/panoramas_button_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_button" />
    <Button
        android:id="@+id/panoramas_button_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_button_section"
        android:fontFamily="@font/pt_cabin_bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_not_implemented_yet_button"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:text="@string/panorama"
        android:gravity="bottom"
        android:paddingBottom="14dp"
        android:paddingStart="12dp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/sculptures_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/search_button_section"
        app:layout_constraintStart_toStartOf="@id/search_button_section"
        android:fontFamily="@font/pt_cabin_bold"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_not_implemented_yet_button"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:text="@string/sculptures"
        android:gravity="bottom"
        android:paddingBottom="14dp"
        android:paddingStart="12dp"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/make_a_way_section_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/search_button_section"
        app:layout_constraintEnd_toEndOf="@id/panoramas_button_section"
        android:fontFamily="@font/pt_cabin_bold"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_not_implemented_yet_button"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:text="@string/Ways"
        android:gravity="bottom"
        android:paddingBottom="14dp"
        android:paddingStart="12dp"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>