<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Main">


    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:minHeight="@dimen/quiz_question_min_height"
        android:paddingBottom="10dp"
        app:layout_constraintVertical_bias="0.1"
        android:background="@drawable/round_back_question"
        tools:text="Test question"
        android:gravity="center"
        android:textSize="@dimen/quiz_question_text_size"
        android:visibility="gone"
        tools:visibility="visible"/>


    <TextView
        android:id="@+id/question_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_header_text_size"
        android:background="@drawable/round_header_question_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/quiz_question"
        android:text="@string/_1_5"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:elevation="4dp"
        android:translationY="-20dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/start_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/start_quiz"
        android:textColor="@color/black"
        android:textSize="@dimen/start_quiz_button_text_size"
        android:visibility="gone"
        tools:visibility="visible"/>
    <TextView
        android:id="@+id/intro_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_quiz_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_question"
        android:padding="20dp"
        android:gravity="center"
        android:textSize="@dimen/intro_text_view_text_size"
        android:text="@string/intro_quiz"/>
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/quiz_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:indeterminateDrawable="@drawable/progress_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_view_quiz_questions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_question"
        app:layout_constraintBottom_toTopOf="@id/next_question_button"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/next_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/next_question"
        android:textSize="@dimen/next_question_button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/end_quiz_part1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/you_end_quiz"
        android:textSize="@dimen/end_quiz_part1_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/end_quiz_part2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_quiz_part1"
        android:text="@string/hope_you_enjoy"
        android:padding="20dp"
        android:textSize="@dimen/end_quiz_part2_text_size"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:background="@drawable/round_back_question"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>