<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">
            <ScrollView
                android:id="@+id/article_scroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bottom_article_part">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    xmlns:tools="http://schemas.android.com/tools">

            <TextView
                android:id="@+id/article_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/pt_serif_web_bold"
                android:textSize="@dimen/article_name_text_view_text_size"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="ABC" />
            <ImageView
                android:id="@+id/article_image_image_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/article_name_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitStart"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/article_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/article_image_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/yandex_map_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:gravity="start"
                android:fontFamily="serif"
                android:textSize="@dimen/article_content_text_size"
                android:lineHeight="@dimen/article_content_line_height"
                android:typeface="normal"
                tools:text="ABC\nasdhb"

                />
            <ImageView
                android:id="@+id/yandex_logo_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/yandex_map_button"
                app:layout_constraintBottom_toBottomOf="@id/yandex_map_button"
                app:layout_constraintEnd_toStartOf="@id/yandex_map_button"
                android:src="@drawable/ic_yandex_maps_icon__1_"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginStart="30dp"
                />

            <ImageButton
                android:id="@+id/yandex_map_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/article_content"
                app:layout_constraintStart_toEndOf="@id/yandex_logo_image_view"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background = "@drawable/yandex_map_round_button"
                app:layout_constraintHorizontal_weight="7" />
            <TextView
                android:id="@+id/yandex_map_text_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/yandex_map_button"
                app:layout_constraintBottom_toBottomOf="@id/yandex_map_button"
                app:layout_constraintEnd_toEndOf="@id/yandex_map_button"
                app:layout_constraintStart_toStartOf="@id/yandex_map_button"
                android:text="@string/place_on_map"
                android:gravity="center"
                android:fontFamily="@font/pt_serif_web_bold"
                android:textSize="20sp"
                />
            <ImageView
                android:id="@+id/wiki_logo_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/wiki_info_button"
                app:layout_constraintTop_toTopOf="@id/wiki_info_button"
                app:layout_constraintBottom_toBottomOf="@id/wiki_info_button"
                android:layout_marginStart="30dp"
                app:layout_constraintHorizontal_weight="1"
                android:src="@drawable/ic_wikipedia_logo__svg_"
                />
            <ImageButton
                android:id="@+id/wiki_info_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yandex_map_button"
                app:layout_constraintStart_toEndOf="@id/wiki_logo_image_view"
                android:background="@drawable/wiki_info_round_button"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintHorizontal_weight="7"
                />
            <TextView
                android:id="@+id/wiki_info_text_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/wiki_info_button"
                app:layout_constraintBottom_toBottomOf="@id/wiki_info_button"
                app:layout_constraintEnd_toEndOf="@id/wiki_info_button"
                app:layout_constraintStart_toStartOf="@id/wiki_info_button"
                android:text="@string/wikipedia"
                android:gravity="center"
                android:fontFamily="@font/pt_serif_web_bold"
                android:textSize="20sp"
                />
                    <TextView
                        android:id="@+id/gallery_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/wiki_info_button"
                        android:layout_marginTop="20dp"
                        android:text="@string/Gallery"
                        android:textSize="23sp"
                        android:fontFamily="@font/pt_serif_web_bold"
                        android:layout_marginStart="30dp"

                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/gallery_rec_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/gallery_text_view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_article_part"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <FrameLayout
            android:id="@+id/fr1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fr2"
            app:layout_constraintHorizontal_weight="23"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <ImageButton
                android:id="@+id/article_back_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_frame"
                android:layout_margin="9dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_home"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:textSize="@dimen/go_home_text_size"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/fr2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fr1"
            app:layout_constraintHorizontal_weight="10"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <ImageButton
                android:id="@+id/article_like_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/switcher"
                android:layout_margin="9dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like1"
                android:layout_gravity="center"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>